--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "author": "Artem Boyur",
   "license": "ISC",
-
   "devDependencies": {
     "browser-sync": "2.11.2",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -21,6 +20,7 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svgmin": "^1.2.2",
+    "gulp.spritesmith": "^6.2.1",
     "jquery": "^2.1.3",
     "rimraf": "2.5.2"
   },
