--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "browser-sync": "2.11.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-buffer": "0.0.2",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "2.6.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-csso": "^2.0.0",
     "gulp-eslint": "2.0.0",
+    "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "1.2.0",
+    "gulp-merge": "^0.1.1",
     "gulp-notify": "2.2.0",
     "gulp-pug": "^3.0.3",
     "gulp-replace": "^0.5.4",
