--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "portfolio-advanced",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Artem Boyur",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
     "browser-sync": "2.11.2",
     "font-awesome": "^4.6.3",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-buffer": "0.0.2",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "2.6.0",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-csso": "^2.0.0",
-    "gulp-eslint": "2.0.0",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-load-plugins": "1.2.0",
-    "gulp-merge": "^0.1.1",
-    "gulp-notify": "2.2.0",
-    "gulp-pug": "^3.0.3",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "2.2.0",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-svg-sprite": "^1.3.1",
-    "gulp-svgmin": "^1.2.2",
-    "gulp.spritesmith": "^6.2.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-file-copy": "0.0.1",
+    "gulp-postcss": "^6.2.0",
+    "gulp-pug": "^3.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "jquery": "^2.1.3",
-    "rimraf": "2.5.2"
+    "postcss-assets": "^4.1.0",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-compact-mq": "^0.2.1",
+    "postcss-custom-media": "^5.0.1",
+    "postcss-font-awesome": "^0.3.4",
+    "postcss-fontpath": "^0.3.0",
+    "postcss-import": "^8.1.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-short": "^1.4.0",
+    "stylelint": "^7.3.1"
   },
   "dependencies": {
     "normalize.css": "^4.1.1"
